--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-leaflet": "^4.2.1",
